tests/tests/errors/2023-1.vb
'#compiler-options:/win32icon:icon /win32resource:resource
'#compiler-message:Command line error BC2023 : cannot specify both /win32icon and /win32resource
'#exit-code:1